--- a/client/index.html
+++ b/client/index.html
@@ -82,7 +82,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/upload/papaparse.min.js"></script>
+      <script src="app/upload/papaparse.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
@@ -93,6 +93,7 @@
       <script src="app/job/Job.service.js"></script>
       <script src="app/job/job.controller.js"></script>
       <script src="app/job/job.js"></script>
+      <script src="app/location/Location.service.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/schedule/schedule.controller.js"></script>
@@ -101,8 +102,8 @@
       <script src="app/slot/slot.controller.js"></script>
       <script src="app/slot/slot.js"></script>
       <script src="app/upload/Upload.service.js"></script>
-      <script src="app/upload/papaparse.js"></script>
       <script src="app/account/login/login.controller.js"></script>
+      <script src="app/upload/papaparse.min.js"></script>
       <script src="app/upload/upload.controller.js"></script>
       <script src="app/upload/upload.js"></script>
       <script src="app/viewer/viewer.controller.js"></script>
