Working more on location job detail page

--- a/client/app/job/job-detail.html
+++ b/client/app/job/job-detail.html
@@ -21,6 +21,30 @@
     </div>
   </div>
 
+  <div class="panel panel-default" ng-hide="jobCtrl.isReadOnly()">
+    <div class="panel-heading">Add a location:</div>
+    <div class="panel-body">
+      <form>
+        <div class="form-group">
+          <label for="location">Location</label>
+          <input type="text" class="form-control" id="location" placeholder="Location" ng-model="jobCtrl.location">
+        </div>
+        <button type="submit" ng-click="jobCtrl.addLocation()" class="btn btn-default">Add Location</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">Locations for this job:</div>
+    <div class="list-group">
+      <div class="list-group-item no-padding" style="" ng-repeat="location in jobCtrl.locations">
+        <div class="group-item">{{ location.name }}</div>
+        <a ng-click="jobCtrl.removeLocation(location, $index)" ng-href="" class="btn btn-sm btn-danger group-item-remove" style=""><span class="glyphicon glyphicon-trash"></span></a>
+      </div>
+    </div>
+    <div class="panel-body" ng-hide="jobCtrl.areThereLocations()">There are currently no locations defined for this job.</div>
+  </div>
+
   <div class="panel panel-default">
     <div class="panel-heading">Time slots for this job:
       <div class="pull-right"><a href="/slots/create/{{jobCtrl.job._id}}">Create a time slot</a></div>
