--- a/client/app/slot/slot-detail.html
+++ b/client/app/slot/slot-detail.html
@@ -16,7 +16,7 @@
     <div class="panel-heading">Volunteers assigned to this time slot:</div>
     <div class="list-group">
       <div class="list-group-item no-padding" ng-repeat="volunteer in slotCtrl.vols | orderBy: 'lastName'">
-        <a ng-href="/volunteers/{{volunteer._id}}" class="group-item">{{ volunteer.firstName }} {{ volunteer.lastName }}</a>
+        <a ng-href="/volunteers/{{volunteer._id}}" class="group-item">{{ volunteer.firstName }} {{ volunteer.lastName }}: {{ volunteer.location.name }}</a>
         <a ng-click="slotCtrl.removeVolunteer(volunteer)" ng-href="" class="btn btn-sm btn-danger group-item-remove"><span class="glyphicon glyphicon-trash"></span></a>
       </div>
     </div>
@@ -29,14 +29,22 @@
       <div class="success" ng-show="slotCtrl.isSuccess()">You have successfully added a volunteer to this time slot.<br /><br /></div>
       <div class="warning" ng-show="slotCtrl.isError()">{{ slotCtrl.errorMessage }}<br /><br /></div>
       <form>
-        <div class="form-group">
-          <label for="volunteer">Pick a volunteer</label><br />
-          <select id="volunteer" name="volunteer" ng-model="slotCtrl.volunteer" required>
-            <option class="dropdown-header" disabled>Volunteers that prefer this job:</option>
-            <option ng-repeat="vol in slotCtrl.volunteers | filter: slotCtrl.getJobTitle(slotCtrl.slot.jobID) | orderBy: 'lastName'" value="{{ vol._id }}" >{{ vol.firstName }} {{ vol.lastName }}</option>
-            <option class="dropdown-header" disabled>All volunteers:</option>
-            <option ng-repeat="vol in slotCtrl.volunteers | orderBy: 'lastName'" value="{{ vol._id }}" >{{ vol.firstName }} {{ vol.lastName }}</option>
-          </select>
+        <div class="clearfix">
+          <div class="form-group pull-left">
+            <label for="volunteer">Pick a volunteer</label><br />
+            <select id="volunteer" name="volunteer" ng-model="slotCtrl.volunteer" required>
+              <option class="dropdown-header" disabled>Volunteers that prefer this job:</option>
+              <option ng-repeat="vol in slotCtrl.volunteers | filter: slotCtrl.getJobTitle(slotCtrl.slot.jobID) | orderBy: 'lastName'" value="{{ vol._id }}" >{{ vol.firstName }} {{ vol.lastName }}</option>
+              <option class="dropdown-header" disabled>All volunteers:</option>
+              <option ng-repeat="vol in slotCtrl.volunteers | orderBy: 'lastName'" value="{{ vol._id }}" >{{ vol.firstName }} {{ vol.lastName }}</option>
+            </select>
+          </div>
+          <div class="form-group pull-left pad-left">
+            <label for="volunteer">Pick a location</label><br />
+            <select id="location" name="location" ng-model="slotCtrl.location" required>
+              <option ng-repeat="loc in slotCtrl.locations | orderBy: 'name'" value="{{ loc._id }}" >{{ loc.name }}</option>
+            </select>
+          </div>
         </div>
         <button type="submit" ng-click="slotCtrl.addVolunteer()" class="btn btn-default">Add Volunteer</button>
       </form>
