Ability to delete jobs and slots and still delete locations with it assigned to volunteer

--- a/client/app/volunteer/volunteer-detail.html
+++ b/client/app/volunteer/volunteer-detail.html
@@ -50,6 +50,7 @@
         <strong>Job title</strong>: {{ volunteerCtrl.getJobTitle(slot.jobID) }} <br />
         <strong>Start time</strong>: {{ volunteerCtrl.parseTime(slot.start) }} <br />
         <strong>End time</strong>: {{ volunteerCtrl.parseTime(slot.end) }} <br />
+        <strong>Location</strong>: {{ slot.location }} <br />
       </div>
       <div class="panel-body" ng-hide="volunteerCtrl.areThereSlots()">There are currently no assigned jobs for this volunteer.</div>
     </div>
