Removing a few unfinished features for the class showing tomorrow

--- a/client/app/schedule/schedule.html
+++ b/client/app/schedule/schedule.html
@@ -1,9 +1,9 @@
 <div class="panel panel-default" ng-class="scheduleCtrl.getClass()">
   <div class="panel-heading">Master Schedule:
-    <div class="pull-right">
+    <!--<div class="pull-right">
       <span ng-show="scheduleCtrl.getSlotMode()"><a href="" ng-click="scheduleCtrl.toggleSlotMode()">View Volunteer Schedule</a></span>
       <span ng-hide="scheduleCtrl.getSlotMode()"><a href="" ng-click="scheduleCtrl.toggleSlotMode()">View Slot Schedule</a></span>
-    </div>
+    </div>-->
   </div>
   <ul class="list-group" ng-show="scheduleCtrl.areThereJobs() && !scheduleCtrl.getSlotMode()">
     <li class="list-group-item list-group-item-information clearfix">
