made confirmation message for create volunteer made a default location appear when no location is specified

--- a/client/app/volunteer/volunteer-create.html
+++ b/client/app/volunteer/volunteer-create.html
@@ -1,6 +1,7 @@
 <div class="panel panel-default volunteer-create-container">
   <div class="panel-heading">Personal Details:</div>
   <div class="panel-body">
+    <div class="success" ng-show="volunteerCtrl.isSuccess()">You have successfully created a new volunteer.<br /><br /></div>
     <form class="form-horizontal">
       <div class="col-md-5">
         <div class="form-group">
