making schedule builder available to organizer

--- a/client/app/builder/builder.html
+++ b/client/app/builder/builder.html
@@ -2,6 +2,6 @@
   <div class="panel-heading">Schedule Builder:
   </div>
   <div class="panel-body">
-    You will be able to build a schedule from this page.
+      <button ng-click="" type="button" class="btn btn-success">Create a Schedule</button>
   </div>
 </div>
