--- a/client/app/job/job-detail.html
+++ b/client/app/job/job-detail.html
@@ -14,6 +14,10 @@
         <label for="description">Description:</label>
         <input type="text" class="form-control" id="description" ng-model="jobCtrl.job.description" ng-readonly="jobCtrl.isReadOnly()">
       </div>
+      <div class="form-group">
+        <label for="trainingTime">Training Time:</label>
+        <input type="number" id="trainingTime" ng-model="jobCtrl.job.trainingTime" ng-readonly="jobCtrl.isReadOnly()">
+      </div>
     </div>
   </div>
 
