Sydney, Emily: added comments to slot.controller, slot.html, slot.detail.html, slot-create.html

--- a/client/app/job/job-create.html
+++ b/client/app/job/job-create.html
@@ -1,4 +1,6 @@
 <div class="panel panel-default job-container">
+
+  <!--form for user to add a new job-->
   <div class="panel-heading">Create a job:</div>
   <div class="panel-body">
     Create a job here. These are jobs that will later be used to create time slots for the schedule. <br /><br />
