--- a/client/app/schedule/schedule.html
+++ b/client/app/schedule/schedule.html
@@ -1,4 +1,6 @@
 <div class="panel panel-default" ng-class="scheduleCtrl.getClass()">
+
+  <!--this page displays a schedule showing all time slots (and volunteers scheduled) for the event-->
   <div class="panel-heading">Master Schedule:
     <!--<div class="pull-right">
       <span ng-show="scheduleCtrl.getSlotMode()"><a href="" ng-click="scheduleCtrl.toggleSlotMode()">View Volunteer Schedule</a></span>
