--- a/client/app/slot/slot-create.html
+++ b/client/app/slot/slot-create.html
@@ -1,4 +1,6 @@
 <div class="panel panel-default slot-container">
+
+  <!--this page is where user can create new job slots-->
   <div class="panel-heading">Create a time slot:</div>
   <div class="panel-body" ng-hide="slotCtrl.canCreate()">
     {{ slotCtrl.errorMessage }}
