--- a/client/app/slot/slot-detail.html
+++ b/client/app/slot/slot-detail.html
@@ -1,5 +1,7 @@
 <div class="slot-container" ng-show="slotCtrl.doesSlotExist()">
   <div class="panel panel-default">
+
+    <!--this page shows information on slots that have been created-->
     <div class="panel-heading">Slot Info:
       <div class="pull-right"><a href="/slots">Back to slot list</a></div>
     </div>
