--- a/client/app/slot/slot.html
+++ b/client/app/slot/slot.html
@@ -1,4 +1,6 @@
 <div class="panel panel-default slot-container">
+
+  <!--this page lists all time slots that have been created-->
   <div class="panel-heading">List of all time slots:
     <div class="pull-right"><a href="/slots/create">Add a time slot</a></div>
   </div>
