sending email to individual volunteer and all volunteers

--- a/client/app/volunteer/volunteer.html
+++ b/client/app/volunteer/volunteer.html
@@ -6,6 +6,21 @@
   </div>
 </div><br /></div>
 <div class="panel panel-default volunteer-container">
+  <div class="panel-heading">Email all volunteers:</div>
+  <div class="panel-body">
+    <form class="form-horizontal">
+      <div class="col-md-6">
+        <div class="form-group">
+          <div class="col-sm-9">
+            <button ng-click="volunteerCtrl.emailAllVolunteers()" type="button" class="btn btn-success">Email Volunteers</button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+</div><br /></div>
+<div class="panel panel-default volunteer-container">
   <div class="panel-heading">List of all volunteers:
     <div class="pull-right"><a href="/volunteers/create">Add a volunteer</a></div>
   </div>
