--- a/client/app/volunteer/volunteer-detail.html
+++ b/client/app/volunteer/volunteer-detail.html
@@ -1,5 +1,20 @@
 <div ng-show="volunteerCtrl.doesVolunteerExist()">
   <div class="panel panel-default volunteer-create-container">
+    <div class="panel-heading">Email this volunteer:</div>
+    <div class="panel-body">
+      <form class="form-horizontal">
+        <div class="col-md-6">
+          <div class="form-group">
+            <div class="col-sm-9">
+              <button ng-click="volunteerCtrl.emailVolunteer()" type="button" class="btn btn-success">Email Volunteer</button>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  <br /><br />
+  <div class="panel panel-default volunteer-create-container">
     <div class="panel-heading">
       <span ng-show="volunteerCtrl.isReadOnly()">Viewing Volunteer:</span>
       <span ng-hide="volunteerCtrl.isReadOnly()">Editing Volunteer:</span>
