adding notification of in progress and completion to schedule builder

--- a/client/app/builder/builder.html
+++ b/client/app/builder/builder.html
@@ -5,7 +5,10 @@
 
     <!--clicking button calls buildSchedule function which builds a schedule -->
     <button  type="button" ng-click="builderCtrl.buildSchedule()" class="btn btn-success">Create a Schedule</button>
-    <span ng-bind="builderCtrl.endMessage"></span>
+    <span id="brokenthing">  </span>
 
 
 </div>
+  </div>
+
+
